--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -9,21 +9,25 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-
-   <!-- Navbar -->
-  <div class="nav-bar">
-    <div class="d-flex align-items-center">
-      <button onclick="goBack()" class="back-button">
-        <i class="fas fa-arrow-left"></i>
-      </button>
-      <i class="fas fa-brain" style="font-size: 25px; color: #000;"></i>
-      <strong> Gradia</strong>
+<div class="nav-bar">
+        <div class="d-flex align-items-center">
+            <a href="{{ url_for('index') }}" class="logo-container" style="text-decoration: none; color: inherit;">
+                <button onclick="goBack()" class="back-button">
+                    <i class="fas fa-arrow-left"></i>
+                </button>
+                <i class="fas fa-brain" style="font-size: 25px; color: #000;"></i>
+                <strong> Gradia</strong>
+            </a>
+        </div>
+        <div class="nav-links">
+            {% if not current_user %}
+            <a href="/login">Log in</a>
+            <a href="/signup">Sign up</a>
+            {% endif %}
+            <a href="/about">About Us</a>
+            <a href="/tutorial">Quick Tutorial</a>
+        </div>
     </div>
-    <div class="nav-links">
-      <a href="{{url_for('about')}}">About Us</a>
-      <a href="{{url_for('tutorial')}}">Quick Tutorial</a>
-    </div>
-  </div>
 
   <!-- Main Content Container -->
   <div class="container">
