--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,23 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel = "stylesheet", type = "text/css", href = "{{ url_for('static', filename = 'css/homepage.css') }}"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css ">
   <title> Gradia </title>
 </head>
 <body>
-  <header>
-    <div class="d-flex align-items-center">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css ">
-      <i class="fas fa-brain" style="font-size: 25px; color: #000;"></i>
-      <strong> Gradia </strong> 
+    <div class="nav-bar">
+      <div class="logo-container">
+        <a href="{{ url_for('index') }}" class="logo-container" style="text-decoration: none; color: inherit;">
+          <i class="fas fa-brain" style="font-size: 25px; color: #000;"></i>
+          <strong> Gradia </strong>
+        </a>
+      </div>
+      <nav>
+        <a href="/login">Log in</a>
+        <a href="/signup">Sign up</a>
+        <a href="/about">About Us</a>
+        <a href="/tutorial">Quick Tutorial</a>
+      </nav>
     </div>
-    <nav>
-      <a href="/login">Log in</a>
-      <a href="/signup">Sign up</a>
-      <a href="/about">About Us</a>
-      <a href="/tutorial">Quick Tutorial</a>
-    </nav>
-  </header>
-  {% block content %} 
+  {% block content %}
   {# This section can be overwritten!!#}
   {% endblock content%}
 
