--- a/templates/teacher_dashboard.html
+++ b/templates/teacher_dashboard.html
@@ -10,11 +10,15 @@
 
 </head>
 <body>
-  <!-- Navbar -->
   <div class="nav-bar">
-    <div class="nav-bar-left">
-      <i class="fas fa-brain" style="font-size: 25px; color: #000; margin-right: 10px;"></i>
-      <strong>Gradia</strong>
+    <div class="d-flex align-items-center">
+      <div class="logo-container">
+       <a href="{{ url_for('index') }}" class="logo-container" style="text-decoration: none; color: inherit;">
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css ">
+          <i class="fas fa-brain" style="font-size: 25px; color: #000;"></i>
+          <strong> Gradia </strong>
+        </a>
+      </div>
     </div>
     <div class="nav-links">
       <a href="{{url_for('about')}}">About Us</a>
