--- a/static/css/course_grades_student.css
+++ b/static/css/course_grades_student.css
@@ -1,8 +1,7 @@
 body {
     background-color: #bcdde5;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    color: #2c3e50;
+    font-family: Arial, sans-serif;
+    color: #333;
     line-height: 1.6;
 }
 
@@ -13,45 +12,6 @@ body {
     padding: 10px 20px;
     border-bottom: 1px solid black;
     background-color: #bcdde5;
-}
-
-.nav-bar .logo {
-    display: flex;
-    align-items: center;
-    font-size: 24px;
-    font-weight: bold;
-    color: #000;
-}
-
-.nav-bar img {
-    height: 30px;
-    margin-right: 10px;
-}
-
-.nav-links a {
-    margin-left: 20px;
-    color: black;
-    text-decoration: none;
-    font-size: 0.9rem;
-}
-
-.nav-links a:hover {
-    color: #1e73e4;
-}
-
-.nav-links a::after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 2px;
-    bottom: -4px;
-    left: 0;
-    background-color: #3498db;
-    transition: width 0.3s ease;
-}
-
-.nav-links a:hover::after {
-    width: 100%;
 }
 
 .back-button {
@@ -72,6 +32,24 @@ body {
 .back-button:focus {
     outline: none;
 }
+
+.nav-bar i {
+    font-size: 25px;
+    color: #000;
+    margin-right: 10px;
+}
+
+.nav-links a {
+    margin-left: 20px;
+    color: black;
+    text-decoration: none;
+    font-size: 0.9rem;
+}
+
+.nav-links a:hover {
+    color: #1e73e4;
+}
+
 
 .logo-container {
   display: flex;
