--- a/static/css/tutorial.css
+++ b/static/css/tutorial.css
@@ -1,12 +1,10 @@
-/* General Styles */
 body {
     background-color: #bcdde5;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, sans-serif;
     color: #333;
     line-height: 1.6;
 }
 
-/* Navigation Bar */
 .nav-bar {
     display: flex;
     justify-content: space-between;
@@ -14,6 +12,22 @@ body {
     padding: 10px 20px;
     border-bottom: 1px solid black;
     background-color: #bcdde5;
+}
+.nav-bar i {
+    font-size: 25px;
+    color: #000;
+    margin-right: 10px;
+}
+
+.nav-links a {
+    margin-left: 20px;
+    color: black;
+    text-decoration: none;
+    font-size: 0.9rem;
+}
+
+.nav-links a:hover {
+    color: #1e73e4;
 }
 
 .back-button {
@@ -35,22 +49,6 @@ body {
     outline: none;
 }
 
-.nav-bar i {
-    font-size: 25px;
-    color: #000;
-    margin-right: 10px;
-}
-
-.nav-links a {
-    margin-left: 20px;
-    color: black;
-    text-decoration: none;
-    font-size: 0.9rem;
-}
-
-.nav-links a:hover {
-    color: #1e73e4;
-}
 
 /* Tutorial Container */
 .tutorial-container {
