--- a/templates/course_grades_student.html
+++ b/templates/course_grades_student.html
@@ -14,7 +14,7 @@
       <button onclick="goBack()" class="back-button">
         <i class="fas fa-arrow-left"></i>
       </button>
-      <a href="{{ url_for('index') }}" class="logo-container" style="text-decoration: none; color: inherit;">
+      <a href="{{ url_for('student_dashboard') }}" class="logo-container" style="text-decoration: none; color: inherit;">
         <span class="logo-icon">🎓</span>
         <span>Gradia</span>
       </a>
