--- a/templates/profile_student.html
+++ b/templates/profile_student.html
@@ -15,7 +15,7 @@
             <button onclick="goBack()" class="back-button">
                 <i class="fas fa-arrow-left"></i>
             </button>
-            <a href="{{ url_for('index') }}" class="logo-container" style="text-decoration: none; color: inherit;">
+            <a href="{{ url_for('student_dashboard') }}" class="logo-container" style="text-decoration: none; color: inherit;">
               <i class="fas fa-brain logo-icon"></i>
               <strong>Gradia</strong>
             </a>
